@@ -114,7 +114,7 @@ enum {
 enum {
 	SANITIZE_FREEZE_LOCK_KEY		= 0x46724C6B,	/* "FrLk" */
 	SANITIZE_ANTIFREEZE_LOCK_KEY	= 0x416E7469,	/* "Anti" */
-	SANITIZE_CRYPTO_SCRAMBLR_KEY	= 0x43727970,	/* "Cryp" */
+	SANITIZE_CRYPTO_SCRAMBLE_KEY	= 0x43727970,	/* "Cryp" */
 	SANITIZE_BLOCK_ERASE_KEY		= 0x426B4572,	/* "BkEr" */
 	SANITIZE_OVERWRITE_KEY			= 0x00004F57,	/* "OW"   */
 };
